# opencmw-benchmarks-cpp

./: CMakeLists.txt  README.md  default.nix  plotResults.m  results.csv
buildStatic/src/capnproto/: TestDataClassCapn.capnp.c++  TestDataClassCapn.capnp.h
buildStatic/src/protobuf/: TestDataClass.pb.cc  TestDataClass.pb.h
capnproto/: CMakeLists.txt  TestDataClass.capnp  capnproto_bench.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake
flatbuffers/: CMakeLists.txt  flatbuffers_bench.cpp
memcpy/: CMakeLists.txt  memcpy_bench.cpp
opencmw/: CMakeLists.txt  opencmw_bench.cpp
protobuf/: CMakeLists.txt  protobuf_bench.cpp
src/: TestDataClass.hpp
src/capnproto/: CMakeLists.txt  TestDataClass.capnp  TestDataClassCapn.capnp  capnproto_bench.cpp
src/flatbuffers/: CMakeLists.txt  TestDataClass.fbs  TestDataClass_generated.h  flatbuffers_bench.cpp
src/memcpy/: CMakeLists.txt  memcpy_bench.cpp
src/opencmw/: CMakeLists.txt  IoClassSerialiserBenchmark.hpp  opencmw_bench.cpp
src/protobuf/: CMakeLists.txt  TestDataClass.proto  protobuf_bench.cpp
